Mon Aug 25 16:15:55 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* session.scm (apropos-internal): Musn't initialize symbol
	accumulator with a constant pair.  That led to mutation of the
	source!

Sun Aug 24 01:03:10 1997  Mikael Djurfeldt  <mdj@kenneth>

	* session.scm (vector-for-each): Removed.
	(apropos): vector-for-each --> array-for-each.
	(apropos-internal): New function.  Return list of accessible
	symbols matching regexp.

	* debug.scm (frame-number->index): New function.  Convert frame
	number (as displayed in the backtrace) to frame index (to be used
	in stack-ref).

	* emacs.scm (emacs-load): New arguments: interactivep: when
 	non-false, send back results to Emacs; colnum: Column number;
	Use modules (ice-9 debug) and (ice-9 session);
	(no-stack, no-source): New simple-actions;
	(result-to-emacs): New procedure. Sends data to Emacs via the
	result protocol;
	(get-frame-source, emacs-select-frame, emacs-frame-eval,
	emacs-symdoc): New procedures.

Wed Aug 20 13:21:11 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (emacs-load): Adjust stack narrowing.
	(whitespace-chars): Include #\np.

	* syncase.scm: Also turn off debugging evaluator and recording of
	procedure names during loading of psyntax.pp.

	* psyntax.pp: Removed leading blanks => 800K -> 100K.

Tue Aug 19 02:39:41 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* syncase.scm: Don't tamper with debug mode setting when enabling
	macros.  Instead cut the stack with start-stack.
	Load psyntax.pp with recording of positions turned off.

	* psyntax.pp, psyntax.ss (quasiquote): Changed fx= --> =.

*	* syncase.scm: New file: Guile-adaption for syntax-case macros.
  	psyntax.pp, psyntax.ss: Syntax-case macros, portable version 2 by
 	R. Kent Dybvig, Oscar Waddell, Bob Hieb and Carl Bruggeman

Mon Aug 18 21:58:25 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

*	* session.scm: New file: Session support.
	(apropos): New procedure: List bindings given regexp.
